pkl-core/src/test/files/LanguageSnippetTests/input/errors/extendTypeAlias.pkl
open class Foo
typealias Bar = Foo(true)
class Baz extends Bar
qux = new Baz {}
